# diarios-do-clima-backend

./: .env.exemple  .example.env  .gitignore  Dockerfile  compose.override.yml  compose.prod.yml  compose.yml  docker-compose.dev.exemple.yml  docker-compose.prod.exemple.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.circleci/: config.yml
accounts/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0002_user_alert_email.py  0003_alter_user_managers.py
accounts/tests/: test_login.py  test_user_create.py  test_user_me_get.py  test_user_me_update.py
alerts/: admin.py  models.py  serializers.py  tasks.py  urls.py
alerts/migrations/: 0001_initial.py  0002_remove_alertsubtheme_alert_alert_gov_entites_and_more.py  0003_rename_gov_entites_alert_gov_entities_and_more.py  0004_alert_email.py  (+2 more)
app/: .example.env  Dockerfile  compose.yml  pagseguro.html  pagseguro_plano_create.py  requirements.in  requirements.txt
billing/: models.py  selectors.py  serializers.py  urls.py  views.py
cli/: cli.py
config/: celery.py  settings.py  urls.py
libs/: json_serializeble.py
libs/ibge/: city.py  (+2 more)
nginx/: Dockerfile  default.conf  django.conf
plans/: actions.py  admin.py  models.py  serializers.py  urls.py
querido_diario/: apps.py  urls.py
reports/: admin.py  models.py  serializers.py  urls.py
subscriptions/: actions.py  admin.py  models.py  selectors.py  serializers.py  tasks.py  urls.py  views.py
web/: Dockerfile  requirements.txt
(+132 files in other folders)
